fix posts list overflowing page

--- a/_scss/_posts.scss
+++ b/_scss/_posts.scss
@@ -7,7 +7,6 @@
 		padding-top: 20px;
 		padding-left: 15px;
 		padding-right: 15px;
-		min-width: 400px;
 		.posts--post-title {
 			color: #333;
 			font-size: 20px;
